# dcp-cu

./: README.md  package.json
src-py/: .gitignore  build-windows.spec  main.py  pyproject.toml  setup.cmd  setup.iss
src-py/apps/: app.py  constants.py  event_api.py  event_util.py  js_api.py  models.py  watch_dir.py
src-py/apps/listeners/: window_event_listener.py
src-py/apps/utils/: event_util.py  path_util.py
src-py/scripts/: hello_world.py
src-py/scripts/data/: 설정.xlsx  설정1.xlsx
src-react/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src-react/src/: App.tsx  index.css
src-react/src/app/about/: AboutView.tsx
src-react/src/app/components/chart/: PageLineChart.tsx
src-react/src/app/components/date/: MonthPicker.tsx
src-react/src/app/config/: configsSlice.ts
src-react/src/app/demo/: DemoGridView.tsx  DemoLineChartView.tsx  DemoView.tsx  Page01View.tsx  PageView.css
src-react/src/app/grid/: ConfigGrid.css  ConfigGrid.tsx
src-react/src/app/job/: jobMonitorSlice.ts
src-react/src/app/just-layout/: justLayoutSlice.ts  justLayoutThunks.ts  layoutUtil.ts
src-react/src/app/listeners/: PyJobListener.tsx  PyListener.tsx  PyWatchListener.tsx
src-react/src/app/page/: OutputGrid.tsx  Page01View.tsx  PageView.css  pageSlice.ts
src-react/src/app/side-menu/: SideMenu.css  SideMenu.tsx
src-react/src/app/terminal/: TerminalView.css  TerminalView.tsx
src-react/src/app/tool-bar/: JustToolBar.css  JustToolBar.tsx
src-react/src/store/: hooks.ts  index.ts
src-react/src/types/: models.d.ts  pywebview.d.ts
(+17 files in other folders)
